text color class added on navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,3 +60,10 @@ a{
     border-bottom: 1px solid green;
     
   }
+
+  .nav-link{
+      font-style: normal;
+      color: black;
+      font-family: 'Times New Roman', Times, serif;
+      font-size: 18;
+  }
